checkpoint: initaial planner impl
